welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:2: error: ':' expected but ',' found.
	def ordre(a,b,c):Boulean {
                   ^inOrderEqual:9: error: identifier expected but '}' found.
}
^